--- a/deb/a/DEBIAN/control
+++ b/deb/a/DEBIAN/control
@@ -1,10 +1,11 @@
-Package: aaron.yaomei.laoshu
-Name: 老鼠二批无视验证
+Package: aaron.zlwl.pubgm
+Name: Pubg Hack
 Depends: mobilesubstrate
-Version: 1.0
 Architecture: iphoneos-arm
-Description: 欢迎使用，本插件老鼠破解版，无需输入激活码，画质请调在高清极限开启按钮即可！
-Author: 妖魅
+Description: Pubg Hack
+Author: 隔壁老王
+Version: 1.1.2
+Installed-Size: 862
 Maintainer: Aaron <851302227@qq.com>
 Section: 游戏(Games)
 Icon: https://aaronc.cn/img/game2.jpg
