--- a/deb/a/DEBIAN/control
+++ b/deb/a/DEBIAN/control
@@ -1,11 +1,10 @@
-Package: aaron.zlwl.pubgm
-Name: Pubg Hack
-Depends: mobilesubstrate
+Package: aaron.chucaotoushitianhei
 Architecture: iphoneos-arm
-Description: Pubg Hack
-Author: 隔壁老王
-Version: 1.1.2
-Installed-Size: 862
+Version: 0.3
+Depends: mobilesubstrate
+Name: 超稳的除草透视天黑
+Description: 自带防封
+Author: 梦三大牛
 Maintainer: Aaron <851302227@qq.com>
 Section: 游戏(Games)
 Icon: https://aaronc.cn/img/game2.jpg
